# integration-tests

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile.test-runner  README.md  dashboard-go.test.dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: integration.yml
mock-battery/: Dockerfile  mock_battery.py
mock-dbus/: Dockerfile  docker_entrypoint.sh  mock_dbus.py
mock-pv/: Dockerfile  mock_pv.py
tests/: conftest.py
tests/integration/: test_battery_pv_mocks.py  test_dbus_battery_pv.py  test_mqtt_flow.py
